force-app/main/default/objects/MentorAmp_User__c/MentorAmp_User__c.object-meta.xml
<CustomObject>
    <label>MentorAmp User</label>
    <nameField>
        <displayFormat>MU-{0000000000}</displayFormat>
        <label>MentorAmp User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MentorAmp Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>