force-app/main/default/objects/MentorAmp_User__c/fields/MentorAmp_User__c.field-meta.xml
<CustomField>
    <fullName>MentorAmp_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MentorAmp User</label>
    <referenceTo>MentorAmp_User__c</referenceTo>
    <relationshipLabel>MentorAmp Users</relationshipLabel>
    <relationshipName>MentorAmp_Users</relationshipName>
    <type>Lookup</type>
</CustomField>