force-app/main/default/objects/MentorAmp_User__c/fields/Progress_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Progress_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Tracker</label>
    <referenceTo>Progress_Tracker__c</referenceTo>
    <relationshipLabel>MentorAmp Users</relationshipLabel>
    <relationshipName>MentorAmp_Users</relationshipName>
    <type>Lookup</type>
</CustomField>