force-app/main/default/objects/MentorAmp_User__c/recordTypes/Mentee.recordType-meta.xml
<RecordType>
    <fullName>Mentee</fullName>
    <active>true</active>
    <label>Mentee</label>
</RecordType>